--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/runtime": "^7.10.2",
     "@hapi/joi": "^17.1.1",
     "app-root-path": "^3.0.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
