--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
   "dependencies": {
     "@babel/runtime": "^7.10.2",
     "@hapi/joi": "^17.1.1",
+    "@sendgrid/mail": "^7.1.1",
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.18",
+    "nodemailer": "^6.4.8",
     "winston": "^3.2.1"
   }
 }
