--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node build/index.js",
-    "build": "npm run remove:build && babel index.js -d build && babel server -d build/server",
-    "remove:build": "rm -rf ./build",
-    "dev": "nodemon --exec babel-node index.js",
+    "start": "node ./dist/index.js",
+    "build": "tsc",
+    "watch": "nodemon",
+    "remove:build": "rm -rf ./dist",
+    "dev": "ts-node index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npx tsc"
   },
   "repository": {
     "type": "git",
@@ -27,12 +28,14 @@
     "@babel/node": "^7.10.1",
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "ts-node": "^8.10.2"
   },
   "dependencies": {
     "@babel/runtime": "^7.10.2",
     "@hapi/joi": "^17.1.1",
     "@sendgrid/mail": "^7.1.1",
+    "@types/express": "^4.17.7",
     "app-root-path": "^3.0.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
