--- a/package.json
+++ b/package.json
@@ -28,8 +28,13 @@
     "@babel/node": "^7.10.1",
     "@babel/plugin-transform-runtime": "^7.10.1",
     "@babel/preset-env": "^7.10.2",
+    "@types/app-root-path": "^1.2.4",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
+    "@types/hapi__joi": "^17.1.4",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.31",
+    "@types/nodemailer": "^6.4.0",
     "nodemon": "^2.0.4",
     "ts-node": "^8.10.2"
   },
