--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,22 +4,23 @@ services:
     build:
       dockerfile: Dockerfile
       context: ./api
-    env_file:
-      — .env
+    env_file: ./api/.env
     volumes:
-      — /app/node_modules 
-      — ./api:/app 
-  client:
-    build:
-      dockerfile: Dockerfile
-      context: ./client
-    volumes:
-      — /app/node_modules
-      — ./client:/app 
+      - /app/node_modules 
+      - ./api:/app 
+  # client:
+  #   build:
+  #     dockerfile: Dockerfile
+  #     context: ./client
+  #   volumes:
+  #     - /app/node_modules
+  #     - ./client:/app 
   nginx:
     restart: always
     build:
       dockerfile: Dockerfile
       context: ./nginx
+    depends_on:
+        - api
     ports:
-      — '5000:80'
+      - "5000:80"
