--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:alpine
-WORKDIR "."
-COPY ./package.json ./
+WORKDIR "/app"
+COPY ./package.json .
 RUN npm install
 COPY . .
 CMD ["npm", "run", "dev"]
